# pubsub-debug

./: .env.dist  .gitignore  Cargo.toml  Readme.md
src/: cli.rs  client.rs  main.rs  publisher.rs  subscriber.rs
