[package]
name = "pubsub-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.8" }
clap = { version = "4.0.26", features = ["derive", "cargo"] }
dotenv = { version = "0.15.0", features = ["clap"] }
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
google-cloud-googleapis = { version = "0.6.0", features = ["pubsub"] }
google-cloud-pubsub = "0.9.0"
google-cloud-gax = "0.9.1"

